--- a/app/src/main/res/layout/fragment_core_detail.xml
+++ b/app/src/main/res/layout/fragment_core_detail.xml
@@ -1,15 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".ui.cores.CoreDetailFragment">
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.capsules.CapsuleDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:id="@+id/text_core_serial"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_height="wrap_content">
 
-</FrameLayout>
+        <TextView
+                android:id="@+id/text_core_serial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="..."
+                tools:text="Merlin1A"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView13"/>
+        <ImageView
+                android:id="@+id/image_core"
+                android:src="@color/colorSecondaryLight"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+                android:id="@+id/text_core_block"
+                android:text="..."
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="1"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/text_core_status"/>
+        <TextView
+                android:id="@+id/text_core_details"
+                android:text="..."
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                tools:text='"Rumored to be used for Inflight Abort Test after DM-1"'
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView12"/>
+        <TextView
+                android:id="@+id/text_core_status"
+                android:text="..."
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                android:textAllCaps="true"
+                tools:text="ACTIVE"
+                app:layout_constraintTop_toTopOf="@+id/text_core_block"
+                app:layout_constraintBottom_toBottomOf="@+id/text_core_block"
+                app:layout_constraintStart_toEndOf="@+id/text_core_block" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+                android:id="@+id/textView3"
+                android:text="ASDS Landings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_core_details"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/text_core_landings_asds"/>
+        <TextView
+                android:id="@+id/text_core_landings_asds"
+                android:text="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/textView3"
+                tools:text="0" app:layout_constraintStart_toEndOf="@+id/textView3"
+                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+                android:id="@+id/textView5"
+                android:text="Reused"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/textView3" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+        <TextView
+                android:id="@+id/text_core_reused"
+                android:text="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="0"
+                app:layout_constraintEnd_toEndOf="@+id/text_core_landings_asds"
+                app:layout_constraintTop_toTopOf="@+id/textView5"/>
+        <TextView
+                android:id="@+id/textView10"
+                android:text="Block"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/text_core_serial"
+                app:layout_constraintStart_toStartOf="@+id/text_core_block"
+                app:layout_constraintEnd_toEndOf="@+id/text_core_block" android:layout_marginTop="8dp"/>
+        <TextView
+                android:id="@+id/textView11"
+                android:text="Status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/textView10"
+                app:layout_constraintBottom_toBottomOf="@+id/textView10"
+                app:layout_constraintStart_toStartOf="@+id/text_core_status"
+                app:layout_constraintEnd_toEndOf="@+id/text_core_status"/>
+        <TextView
+                android:id="@+id/textView12"
+                android:text="Details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/text_core_launch"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+        <TextView
+                android:id="@+id/textView13"
+                android:text="Core serial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/image_core" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
+        <TextView
+                android:id="@+id/textView14"
+                android:text="Original launch (UTC time)"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/text_core_block"/>
+        <TextView
+                android:id="@+id/text_core_launch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" tools:text="2016-02-19"
+                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView14"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
