--- a/app/src/main/res/layout/fragment_capsule_detail.xml
+++ b/app/src/main/res/layout/fragment_capsule_detail.xml
@@ -86,7 +86,7 @@
                 android:id="@+id/textView5" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 app:layout_constraintStart_toStartOf="@+id/textView3"
-        />
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
         <TextView
                 android:text="0"
                 android:layout_width="wrap_content"
