--- a/app/src/main/res/layout/fragment_core_detail.xml
+++ b/app/src/main/res/layout/fragment_core_detail.xml
@@ -11,6 +11,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+        <ImageView
+                android:id="@+id/image_core"
+                android:src="@color/colorSecondaryLight"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+                android:id="@+id/textView13"
+                android:text="Core serial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/image_core" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
+
         <TextView
                 android:id="@+id/text_core_serial"
                 android:layout_width="wrap_content"
@@ -23,14 +42,16 @@
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView13"/>
-        <ImageView
-                android:id="@+id/image_core"
-                android:src="@color/colorSecondaryLight"
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+                android:id="@+id/textView10"
+                android:text="Block"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/text_core_serial"
+                app:layout_constraintStart_toStartOf="@+id/text_core_block"
+                app:layout_constraintEnd_toEndOf="@+id/text_core_block" android:layout_marginTop="8dp"/>
+
         <TextView
                 android:id="@+id/text_core_block"
                 android:text="..."
@@ -41,18 +62,17 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/text_core_status"/>
+
         <TextView
-                android:id="@+id/text_core_details"
-                android:text="..."
-                android:layout_width="0dp"
+                android:id="@+id/textView11"
+                android:text="Status"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                tools:text='"Rumored to be used for Inflight Abort Test after DM-1"'
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView12"/>
+                app:layout_constraintTop_toTopOf="@+id/textView10"
+                app:layout_constraintBottom_toBottomOf="@+id/textView10"
+                app:layout_constraintStart_toStartOf="@+id/text_core_status"
+                app:layout_constraintEnd_toEndOf="@+id/text_core_status"/>
+
         <TextView
                 android:id="@+id/text_core_status"
                 android:text="..."
@@ -65,54 +85,26 @@
                 app:layout_constraintBottom_toBottomOf="@+id/text_core_block"
                 app:layout_constraintStart_toEndOf="@+id/text_core_block" app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintEnd_toEndOf="parent"/>
+
         <TextView
-                android:id="@+id/textView3"
-                android:text="ASDS Landings"
+                android:id="@+id/textView14"
+                android:text="Original launch (UTC time)"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_core_details"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toStartOf="@+id/text_core_landings_asds"/>
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/text_core_block"/>
+
         <TextView
-                android:id="@+id/text_core_landings_asds"
-                android:text="0"
+                android:id="@+id/text_core_launch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@+id/textView3"
-                tools:text="0" app:layout_constraintStart_toEndOf="@+id/textView3"
-                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
-        <TextView
-                android:id="@+id/textView5"
-                android:text="Reused"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@+id/textView3" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"/>
-        <TextView
-                android:id="@+id/text_core_reused"
-                android:text="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="0"
-                app:layout_constraintEnd_toEndOf="@+id/text_core_landings_asds"
-                app:layout_constraintTop_toTopOf="@+id/textView5"/>
-        <TextView
-                android:id="@+id/textView10"
-                android:text="Block"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/text_core_serial"
-                app:layout_constraintStart_toStartOf="@+id/text_core_block"
-                app:layout_constraintEnd_toEndOf="@+id/text_core_block" android:layout_marginTop="8dp"/>
-        <TextView
-                android:id="@+id/textView11"
-                android:text="Status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@+id/textView10"
-                app:layout_constraintBottom_toBottomOf="@+id/textView10"
-                app:layout_constraintStart_toStartOf="@+id/text_core_status"
-                app:layout_constraintEnd_toEndOf="@+id/text_core_status"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" tools:text="2016-02-19"
+                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView14"/>
+
         <TextView
                 android:id="@+id/textView12"
                 android:text="Details"
@@ -123,31 +115,124 @@
                 app:layout_constraintTop_toBottomOf="@+id/text_core_launch"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+
         <TextView
-                android:id="@+id/textView13"
-                android:text="Core serial"
+                android:id="@+id/text_core_details"
+                android:text="..."
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                tools:text='"Rumored to be used for Inflight Abort Test after DM-1"'
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView12"/>
+
+        <TextView
+                android:id="@+id/textView"
+                android:text="RTLS attempts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/image_core" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/text_core_details"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/text_core_rtls_attempts"/>
+
         <TextView
-                android:id="@+id/textView14"
-                android:text="Original launch (UTC time)"
+                android:id="@+id/text_core_rtls_attempts"
+                tools:text="0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/text_core_block"/>
+                app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:text="0"
+                app:layout_constraintTop_toTopOf="@+id/textView"/>
+
         <TextView
-                android:id="@+id/text_core_launch"
+                android:id="@+id/textView4"
+                android:text="RTLS landings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" tools:text="2016-02-19"
-                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView14"/>
+                app:layout_constraintStart_toStartOf="@+id/textView"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
+
+        <TextView
+                android:id="@+id/text_core_rtls_landings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/text_core_rtls_attempts"
+                tools:text="0" app:layout_constraintTop_toTopOf="@+id/textView4"
+                android:text="0"/>
+
+        <TextView
+                android:id="@+id/textView7"
+                android:text="ASDS attempts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView4"
+                app:layout_constraintStart_toStartOf="@+id/textView4"/>
+
+        <TextView
+                android:id="@+id/text_core_asds_attempts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/text_core_rtls_landings"
+                app:layout_constraintTop_toTopOf="@+id/textView7" tools:text="0" android:text="0"/>
+
+        <TextView
+                android:id="@+id/textView3"
+                android:text="ASDS landings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView7"
+                app:layout_constraintStart_toStartOf="@+id/textView7"/>
+
+        <TextView
+                android:id="@+id/text_core_asds_landings"
+                android:text="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/textView3"
+                tools:text="0"
+                app:layout_constraintEnd_toEndOf="@+id/text_core_asds_attempts"/>
+
+        <TextView
+                android:id="@+id/textView9"
+                android:text="Water landing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/textView3"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+
+        <TextView
+                android:id="@+id/text_core_water_landing"
+                android:text="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/textView9"
+                app:layout_constraintEnd_toEndOf="@+id/text_core_asds_landings" tools:text="0"/>
+
+        <TextView
+                android:id="@+id/textView5"
+                android:text="Reused"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView9"
+                app:layout_constraintStart_toStartOf="@+id/textView9" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"/>
+        <TextView
+                android:id="@+id/text_core_reused"
+                android:text="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="0"
+                app:layout_constraintEnd_toEndOf="@+id/text_core_asds_landings"
+                app:layout_constraintTop_toTopOf="@+id/textView5"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
