--- a/app/src/main/res/layout/fragment_capsule_detail.xml
+++ b/app/src/main/res/layout/fragment_capsule_detail.xml
@@ -70,8 +70,9 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView3"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/text_capsule_landings"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_capsule_details"/>
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/text_capsule_landings"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/text_capsule_details"/>
         <TextView
                 android:text="0"
                 android:layout_width="wrap_content"
