--- a/app/src/main/res/layout/fragment_next_launch.xml
+++ b/app/src/main/res/layout/fragment_next_launch.xml
@@ -1,17 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.next_launch.NextLaunchFragment"
         android:id="@+id/swipeRefreshLayout">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:id="@+id/text_next_launch_mission_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                    android:id="@+id/text_mission_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Nusantara Satu (PSN-6) / GTO-1 / Beresheet"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_flight_number"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            />
+            <TextView
+                    android:text="Flight number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView2" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_flight_number" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2"
+                    app:layout_constraintStart_toStartOf="@+id/textView2"
+                    app:layout_constraintEnd_toEndOf="@+id/textView2" tools:text="75"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
+            <TextView
+                    android:text="Launch date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView15" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_mission_name"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_launch_date" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView15"
+                    app:layout_constraintStart_toStartOf="@+id/textView15"
+                    app:layout_constraintEnd_toEndOf="@+id/textView15" tools:text="2019-02-22T01:45:00.000Z"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
