--- a/app/src/main/res/layout/fragment_next_launch.xml
+++ b/app/src/main/res/layout/fragment_next_launch.xml
@@ -7,21 +7,23 @@
         tools:context=".ui.next_launch.NextLaunchFragment"
         android:id="@+id/swipeRefreshLayout">
 
-    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
+    <ScrollView android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             <TextView
                     android:id="@+id/text_mission_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="Nusantara Satu (PSN-6) / GTO-1 / Beresheet"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_flight_number"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            />
+                    tools:text="ArabSat 6A"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+                    app:layout_constraintHorizontal_bias="0.495" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView6"
+                    android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"/>
             <TextView
                     android:text="Flight number"
                     android:layout_width="wrap_content"
@@ -51,8 +53,18 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/text_launch_date" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/textView15"
-                    app:layout_constraintStart_toStartOf="@+id/textView15"
-                    app:layout_constraintEnd_toEndOf="@+id/textView15" tools:text="2019-02-22T01:45:00.000Z"/>
+                    tools:text="2019-02-22T01:45:00.000Z"
+                    android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
+            <TextView
+                    android:text="Mission name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView6" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_flight_number"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
