--- a/app/src/main/res/menu/menu_action_bar.xml
+++ b/app/src/main/res/menu/menu_action_bar.xml
@@ -6,4 +6,9 @@
             android:title="Refresh"
             app:showAsAction="never"/>
 
+    <item
+            android:id="@+id/action_delete"
+            android:title="Delete"
+            app:showAsAction="never"/>
+
 </menu>
