--- a/app/src/main/res/layout/fragment_recycler.xml
+++ b/app/src/main/res/layout/fragment_recycler.xml
@@ -24,8 +24,7 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/fetchButton"/>
+                app:layout_constraintTop_toTopOf="parent"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
